; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_wince.c_set_thread_context.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_wince.c_set_thread_context.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@s = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [24 x i8] c"SetThreadContext handle\00", align 1
@GDB_SETTHREADCONTEXT = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [25 x i8] c"SetThreadContext context\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32*)* @set_thread_context to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @set_thread_context(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32* %1, i32** %5, align 8
  %7 = load i64, i64* @s, align 8
  %8 = icmp slt i64 %7, 0
  br i1 %8, label %9, label %10

9:                                                ; preds = %2
  store i32 1, i32* %3, align 4
  br label %19

10:                                               ; preds = %2
  %11 = load i32, i32* @GDB_SETTHREADCONTEXT, align 4
  %12 = load i32, i32* %4, align 4
  %13 = call i32 @puthandle(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0), i32 %11, i32 %12)
  %14 = load i32, i32* @GDB_SETTHREADCONTEXT, align 4
  %15 = load i32*, i32** %5, align 8
  %16 = call i32 @putmemory(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.1, i64 0, i64 0), i32 %14, i32* %15, i32 4)
  %17 = load i32, i32* @GDB_SETTHREADCONTEXT, align 4
  %18 = call i32 @getresult(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.1, i64 0, i64 0), i32 %17, i32* %6, i32* null)
  store i32 %18, i32* %3, align 4
  br label %19

19:                                               ; preds = %10, %9
  %20 = load i32, i32* %3, align 4
  ret i32 %20
}

declare dso_local i32 @puthandle(i8*, i32, i32) #1

declare dso_local i32 @putmemory(i8*, i32, i32*, i32) #1

declare dso_local i32 @getresult(i8*, i32, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
